[package]
name = "cosmic-stock-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cosmic-stock-viewer"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet"] }
reqwest    = { version = "0.12" }
regex      = { version = "1" }
libc       = { version = "0.2" }
tokio      = { version = "1",    features = ["full"] }

